# keep-yeet

./: .gitignore  README.md  index.html  package.json  seed.sh  test-wipe.sh
.storybook/: main.ts  preview.tsx  tauri-mock.ts
docs/: CODEBASE_AUDIT.md  TODO.md  future-features.md  software-development-plan.md
docs/features/: phase-3-browse-mode.md  phase-4-project-system.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddFolderCard.tsx  AddFolderDialog.tsx  CreateProjectDialog.tsx  FloatingInfoPanel.tsx  FolderBrowseView.tsx  MigrationDialog.tsx  OutputModeToggle.tsx  ProjectCard.tsx  ProjectGalleryPanel.tsx  ProjectGalleryStatsBar.tsx  ProjectStatsBar.tsx  SourceFolderCard.tsx  SubNavigation.tsx
src/components/browse/: Filmstrip.tsx  FilmstripItem.tsx  GlassInfoPanel.tsx  InfoPanel.tsx  MainPreview.tsx  index.ts
src/components/layout/: AppShell.tsx
src/components/review/: DragDropColumn.tsx  DraggableCard.tsx  ReviewGrid.tsx  ReviewHeader.tsx  ReviewListItem.tsx  ReviewPreviewPanel.tsx  index.ts
src/components/ui/: button.tsx  (+6 more)
src/hooks/: useAutoScroll.ts  useEscapeNav.ts  useFolderSession.ts  useGallerySession.ts  useKeyboardNav.ts  useLastClassification.ts  useLocalKeyboardNav.ts  useReviewKeys.ts  useTabNavKeys.ts  useTriageKeys.ts
src/lib/: tauri.ts  utils.ts
src/stores/: useAppStore.ts
src/views/: BrowseView.tsx  ImageWorkspace.tsx  LandingView.tsx  ProjectDetailView.tsx  ProjectListView.tsx  ReviewView.tsx  TriageView.tsx  index.ts
(+11 files in other folders)
